@@ -91,6 +91,8 @@ public:
 	void GhostDestroyed(GhostSolidObject* gb) override;
 
 	void RemoveSolidObject(CSolidObject* object, GhostSolidObject* gb);
+
+	void AddSolidObject(CSolidObject* object) override;
 	void ForceRemoveSolidObject(CSolidObject* object) override;
 
 	void OnDecalLevelChanged() override {}
