@@ -20,6 +20,7 @@ public:
 public:
 	virtual void Draw() = 0;
 
+	virtual void AddSolidObject(CSolidObject* object) = 0;
 	virtual void ForceRemoveSolidObject(CSolidObject* object) = 0;
 
 	//FIXME move to eventhandler?
@@ -42,6 +43,8 @@ class NullGroundDecalDrawer: public IGroundDecalDrawer
 {
 public:
 	void Draw() override {}
+
+	void AddSolidObject(CSolidObject* object) override {}
 	void ForceRemoveSolidObject(CSolidObject* object) override {}
 
 	void GhostDestroyed(GhostSolidObject* gb) override {}
